# Viacanis

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
agent/: Cargo.toml
agent/processes/: mod.rs  monitor_process.rs
agent/src/: main.rs
agent/src/colors/: colors.rs
agent/src/eventlog/: api.rs  mod.rs
agent/src/hunts/: T1037.rs  T1053_005.rs  T1136_001.rs  T1531.rs  T1543_003.rs  createaccount.rs  createmodify_process.rs  deleteaccount.rs  logonscripts.rs  mod.rs
agent/src/testing/: install-atomic-tests.ps1  run-atomic-tests.ps1
agent/src/user/: agent.rs  cli.rs  comms.rs  core.rs  mod.rs
config_tester/: Cargo.toml
config_tester/src/: main.rs
controlcenter/: Cargo.toml
controlcenter/src/: main.rs
controlcenter/src/agents/: agents.rs
controlcenter/src/cli/: cli.rs  logo.rs  mod.rs
controlcenter/src/messages/: messages.rs
controlcenter/src/server/: mod.rs  server.rs  standalone_server.rs
dll_process/: Cargo.toml
dll_process/src/: lib.rs
dll_process/src/hook/: anti_debugging.rs  hook_api.rs  mod.rs
dll_process/src/processes/: process.rs
injector/: Cargo.toml
injector/src/: main.rs
injector/src/debugger/: debug.rs  mod.rs  process.rs
injector/src/inject/: injector.rs
injector/src/utilities/: elevate.rs  mod.rs  util.rs
rules/anti_analysis/: check_for_debugger_via_api.yaml
rules/crypto/: crypto.yaml
rules/host_interaction/sessions/: get_logon_session.yaml
rules/host_interaction/thread/: create_thread.yaml
rules/host_interaction/uac/: token_manipulation.yaml
rules/lib/: alloc_mem.yaml  write_process.yaml
src/: main.rs
src/eventlog/: subscriber.rs
src/hunts/: createaccount.rs  createmodify_process.rs  deleteaccount.rs  logonscripts.rs  mod.rs  scheduletasks.rs
src/user/: agent.rs  cli.rs  dragosagent.rs  mod.rs
