[package]
name = "dragos_agent"
version = "0.1.0"
authors = ["hthomas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win-event-log = { git = "https://github.com/rustysec/win-event-log-rs" }
clap = "2.33"
rustyline = "6.2.0"
tokio = { version = "0.2", features = ["full"] }
shellwords = "1.1"
prettytable-rs = "^0.8"
lazy_static = "1.4.0"
colored = "2.0.0"
serde_derive = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "*"
evtx = "0.6.8"
xml_to_json = "0.1.0"
serde_json = "1.0.59"
ben = "0.2.0"



[dependencies.winapi]
version = "0.3.6"
features = [ "errhandlingapi", "minwindef", "winnt", "winevt", "libloaderapi", "synchapi", "winbase", "handleapi" ]
