[package]
name = "viacanis_agent"
version = "0.0.2"
authors = ["Harry Thomas @infosechoudini"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win-event-log = { git = "https://github.com/rustysec/win-event-log-rs" }
clap = "2.33"
rustyline = "6.2.0"
tokio = { version = "1", features = ["full"] }
shellwords = "1.1"
prettytable-rs = "^0.8"
lazy_static = "1.4.0"
colored = "2.0.0"
serde_derive = "1.0.114"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "*"
evtx = "0.6.8"
xml_to_json = "0.1.0"
serde_json = "1.0.59"
ben = "0.2.0"
xmlJSON = "0.2.0"
rustc-serialize = "0.3.24"
smol = "1.2.4"
hex = "0.4.2"
futures = { version = "0.3" }
log = "0.4.*"
env_logger = "0.7.*"
async-std = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json"] }
sys-info = "0.7"
whoami = "0.9.0"
bincode = "1.3.1"
byteorder = "1.3"
bitflags = "1.0.4"
get_if_addrs = "0.5.3"
cap = "0.1.0"
psutil = "3.2.0"

[target.'cfg(windows)'.dependencies] 
winreg = "0.9.0"


[dependencies.winapi]
version = "0.3.9"
features = [ "errhandlingapi", "minwindef", "winnt", "winevt", "libloaderapi", "synchapi", "winbase", "handleapi" ]

[profile.release]
lto = true
#strip = "symbols"
