[package]
name = "controlcenter"
version = "0.1.0"
authors = ["Harry Thomas @infosechoudini"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6"
clap = "2"
termcolor = "1"
shellwords = "1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
serde_json = "*"
rocket = "0.4.10"
colored = "2.0.0"
libc = "0.2"
prettytable-rs = "^0.8"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.4"
rand = "0.7"
linked-hash-map = "0.5"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]