[package]
name = "dll_process"
version = "0.1.0"
edition = "2018"

[lib]
name = "hook"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharedlib = "3.1"
winapi = { version = "0.3", features = ["dbghelp", "shellapi","securitybaseapi", "winbase", "winerror", "fileapi", "errhandlingapi", "wincrypt", "handleapi", "minwindef", "winnt", "processthreadsapi", "debugapi", "sysinfoapi", "winuser", "minwinbase", "synchapi", "windef", "psapi", "winsvc"]}
libc = "0.2"
kernel32-sys = "0.2"
lazy_static ="*"
detour = "0.8.0"
ntapi = "0.3.6"
serde = "1.0"
serde_yaml = "0.8"
yaml-rust = "0.4.5"
walkdir = "2.3.2"
prettytable-rs = "0.10.0"
colour = "0.6.0"
win32-error = "0.9.0"
winproc = "0.6.4"
