[package]
name = "injector"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
winapi = { version = "0.3", features = ["dbghelp", "shellapi","securitybaseapi", "winbase", "winerror", "fileapi", "errhandlingapi", "wincrypt", "handleapi", "minwindef", "winnt", "processthreadsapi", "debugapi", "sysinfoapi", "winuser", "minwinbase", "synchapi", "windef", "psapi", "winsvc"]}
clap = "2.33"
libc = "0.2.8"
ntapi = "0.3.4"
kernel32-sys = "0.2.2"
log4rs = "0.13.0"
log = "0.4.11"
tokio = { version = "1.9.0", features = ["full"] }
env_logger = "0.8"
win32-error = "0.9.0"
djin = "0.1.1"
detour = "0.8.0"
serde = "1.0"
serde_yaml = "0.8"
yaml-rust = "0.4.5"
walkdir = "2.3.2"
prettytable-rs = "0.10.0"
colour = "0.6.0"
winproc = "0.6.4"
lazy_static ="*"
exe = "0.4.2"